[gd_scene load_steps=9 format=2]

[ext_resource path="res://font_GameofSquids.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Escenas/Scripts/Interfaz.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Puntos" type="Label" parent="."]
margin_left = 113.572
margin_top = -1.65097
margin_right = 153.572
margin_bottom = 42.349
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
material = SubResource( 2 )
anchor_left = 0.513
anchor_top = 0.322
anchor_right = 0.513
anchor_bottom = 0.322
margin_left = -293.253
margin_top = -81.7529
margin_right = 292.747
margin_bottom = 81.2471
custom_fonts/font = SubResource( 3 )
text = "ALIEN VERSUS BALLOON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiempo" type="Label" parent="."]
margin_left = 885.813
margin_top = 1.12462
margin_right = 925.813
margin_bottom = 45.1246
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -30.5
margin_right = 109.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 5 )
text = "PLay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timepo_Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 791.185
margin_top = 9.75736
margin_right = 880.185
margin_bottom = 37.7574
custom_fonts/font = SubResource( 6 )
text = "Tiempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 25.5677
margin_top = 8.33829
margin_right = 114.568
margin_bottom = 36.3383
custom_fonts/font = SubResource( 6 )
text = "Helio"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BotonPlay" to="." method="_on_BotonPlay_pressed"]
[connection signal="timeout" from="Titulo_timer" to="." method="_on_Titulo_timer_timeout"]
